unpackaged/main/default/objects/Metric_Snapshot__c/Metric_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Metric Snapshot</label>
    <nameField>
        <label>Students Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>