unpackaged/main/default/objects/Metric_Snapshot__c/fields/Annotations__c.field-meta.xml
<CustomField>
    <fullName>Annotations__c</fullName>
    <label>Annotations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>