unpackaged/main/default/objects/Metric_Snapshot__c/fields/Current_Year_Students__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Students__c</fullName>
    <label>Students Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>