unpackaged/main/default/objects/Metric_Snapshot__c/fields/Savings_Current__c.field-meta.xml
<CustomField>
    <fullName>Savings_Current__c</fullName>
    <label>Savings Current Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>