unpackaged/main/default/objects/Metric_Snapshot__c/fields/Savings_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Savings_To_Date__c</fullName>
    <label>Savings To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>