unpackaged/main/default/objects/Metric_Snapshot__c/fields/Students_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Students_To_Date__c</fullName>
    <label>Students To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>