unpackaged/main/default/objects/Metric_Snapshot__c/fields/Week_No__c.field-meta.xml
<CustomField>
    <fullName>Week_No__c</fullName>
    <formula>MIN(
MCEILING((365 - (DATEVALUE(TEXT(YEAR( Recorded_Date__c )) + "-12-31") - Recorded_Date__c ) +
IF( MOD(YEAR(Recorded_Date__c ),4)=0, 1,0)) / 7) , 52)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>